@@ -30,7 +30,9 @@
 /*-----------------------------------------------------------------*/
 /* global variables       */
 
-set *iCodeChain = NULL;
+iCode *iCodeChain = 0;
+iCode *iCodeChainEnd;
+
 int iTempNum = 0;
 int iTempLblNum = 0;
 int operandKey = 0;
@@ -127,6 +129,23 @@ iCodeTable codeTable[] = {
   {CRITICAL, "critical_start", picCritical, NULL},
   {ENDCRITICAL, "critical_end", picEndCritical, NULL},
 };
+
+// ADDTOCHAIN - add iCode at the end of the chain. All-caps name, since this used to be a macro. 
+static void
+ADDTOCHAIN (iCode *x)
+{
+  if (!iCodeChain)
+    {
+      iCodeChain = x;
+      iCodeChainEnd = 0;
+    }
+  else
+    iCodeChainEnd->next = x;
+
+  x->prev = iCodeChainEnd;
+  iCodeChainEnd = x;
+  x->next = 0;
+}
 
 /*-----------------------------------------------------------------*/
 /* operandName - returns the name of the operand                   */
@@ -3155,13 +3174,13 @@ geniCodeLogic (operand * left, operand * right, int op, ast * tree)
   if (IS_GENPTR (ltype) && IS_VOID (ltype->next) && IS_ITEMP (left) && IS_PTR (rtype) && !IS_GENPTR (rtype))
     {
       /* find left's definition */
-      ic = (iCode *) setFirstItem (iCodeChain);
+      ic = iCodeChain;
       while (ic)
         {
           if (((ic->op == CAST) || (ic->op == '=')) && isOperandEqual (left, IC_RESULT (ic)))
             break;
           else
-            ic = setNextItem (iCodeChain);
+            ic = ic->next;
         }
       /* if casting literal to generic pointer, then cast to rtype instead */
       if (ic && (ic->op == CAST) && isOperandLiteral (IC_RIGHT (ic)))
@@ -3173,13 +3192,13 @@ geniCodeLogic (operand * left, operand * right, int op, ast * tree)
   if (IS_GENPTR (rtype) && IS_VOID (rtype->next) && IS_ITEMP (right) && IS_PTR (ltype) && !IS_GENPTR (ltype))
     {
       /* find right's definition */
-      ic = (iCode *) setFirstItem (iCodeChain);
+      ic = iCodeChain;
       while (ic)
         {
           if (((ic->op == CAST) || (ic->op == '=')) && isOperandEqual (right, IC_RESULT (ic)))
             break;
           else
-            ic = setNextItem (iCodeChain);
+            ic = ic->next;
         }
       /* if casting literal to generic pointer, then cast to rtype instead */
       if (ic && (ic->op == CAST) && isOperandLiteral (IC_RIGHT (ic)))
@@ -3512,22 +3531,9 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
       return argVals;
     }
 
-  /* get the parameter value */
-  if (parms->type == EX_OPERAND)
-    pval = parms->opval.oprnd;
-  else
-    {
-      /* maybe this else should go away ?? */
-      /* hack don't like this but too lazy to think of
-         something better */
-      if (IS_ADDRESS_OF_OP (parms))
-        parms->left->lvalue = 1;
-
-      if (IS_CAST_OP (parms) && IS_PTR (parms->ftype) && IS_ADDRESS_OF_OP (parms->right))
-        parms->right->left->lvalue = 1;
-
-      pval = geniCodeRValue (ast2iCode (parms, lvl + 1), FALSE);
-    }
+  // Get the parameter value. All the real work for this was done in geniCodeSEParms already.
+  wassert (parms->type == EX_OPERAND);
+  pval = parms->opval.oprnd;
 
   /* if register parm then make it a send */
   if ((IS_REGPARM (parms->etype) && !IFFUNC_HASVARARGS (ftype)) || IFFUNC_ISBUILTIN (ftype))
@@ -4791,27 +4797,6 @@ ast2iCode (ast * tree, int lvl)
 }
 
 /*-----------------------------------------------------------------*/
-/* reverseICChain - gets from the list and creates a linkedlist    */
-/*-----------------------------------------------------------------*/
-iCode *
-reverseiCChain ()
-{
-  iCode *loop = NULL;
-  iCode *prev = NULL;
-
-  while ((loop = getSet (&iCodeChain)))
-    {
-      loop->next = prev;
-      if (prev)
-        prev->prev = loop;
-      prev = loop;
-    }
-
-  return prev;
-}
-
-
-/*-----------------------------------------------------------------*/
 /* iCodeFromAst - given an ast will convert it to iCode            */
 /*-----------------------------------------------------------------*/
 iCode *
@@ -4819,8 +4804,9 @@ iCodeFromAst (ast * tree)
 {
   returnLabel = newiTempLabel ("_return");
   entryLabel = newiTempLabel ("_entry");
+  iCodeChain = 0;
   ast2iCode (tree, 0);
-  return reverseiCChain ();
+  return (iCodeChain);
 }
 
 static const char *
