@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------
-    SDCCset.c - contains support routines for doubly linked lists.
+    SDCCset.c - contains support routines for linked lists.
 
     Written By - Sandeep Dutta . sandeep.dutta@usa.net (1998)
 
